# f1-graph-neo4j

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
f1_graph/: load_f1_data.py
